[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://addons/SpaceShooterRedux/PNG/playerShip2_orange.png" type="Texture" id=2]
[ext_resource path="res://audio/laser2.wav" type="AudioStream" id=3]
[ext_resource path="res://addons/SpaceShooterRedux/PNG/Effects/shield3.png" type="Texture" id=4]
[ext_resource path="res://addons/SpaceShooterRedux/PNG/Effects/fire14.png" type="Texture" id=5]
[ext_resource path="res://addons/SpaceShooterRedux/PNG/Effects/fire11.png" type="Texture" id=6]
[ext_resource path="res://audio/laser1.wav" type="AudioStream" id=7]
[ext_resource path="res://addons/SpaceShooterRedux/PNG/Effects/fire15.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 34.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="player" type="Area2D"]
position = Vector2( 527, 288 )
collision_mask = 14
script = ExtResource( 1 )

[node name="ship" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="bullet_container" type="Node" parent="."]

[node name="muzzle" type="Position2D" parent="."]
position = Vector2( 0, -39 )

[node name="gun_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="sounds" type="Node" parent="."]

[node name="fire" type="Node" parent="sounds"]

[node name="laser1" type="AudioStreamPlayer2D" parent="sounds/fire"]
position = Vector2( 527, 248 )
stream = ExtResource( 7 )
attenuation = 8.28211

[node name="laser2" type="AudioStreamPlayer2D" parent="sounds/fire"]
position = Vector2( 1054, 646 )
stream = ExtResource( 3 )
attenuation = 8.28211

[node name="shield" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="thrusters" type="Node2D" parent="."]
position = Vector2( 0, 35 )

[node name="main_exhaust" type="AnimatedSprite" parent="thrusters"]
rotation = -0.00187606
frames = SubResource( 2 )

[node name="back_exhaust1" type="AnimatedSprite" parent="thrusters"]
position = Vector2( 29, -42 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[node name="back_exhaust2" type="AnimatedSprite" parent="thrusters"]
position = Vector2( -29, -42 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[node name="counterclockwise_exhaust_front" type="AnimatedSprite" parent="thrusters"]
position = Vector2( -32, -15 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[node name="counterclockwise_exhaust_back" type="AnimatedSprite" parent="thrusters"]
position = Vector2( 12, -49 )
rotation = 1.5707
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[node name="clockwise_exhaust_back" type="AnimatedSprite" parent="thrusters"]
position = Vector2( -12, -49 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[node name="clockwise_exhaust_front" type="AnimatedSprite" parent="thrusters"]
position = Vector2( 31, -15 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
